--- a/injuries_kickest.ipynb
+++ b/injuries_kickest.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estrazione dei giocatori infortunati e espulsi (o diffidati) da kickest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -59,7 +66,7 @@
     "            dict['Team'].append(team_name)\n",
     "        \n",
     "\n",
-    "df = pd.DataFrame(dict)\n"
+    "df = pd.DataFrame(dict)"
    ]
   },
   {
@@ -68,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_data = df.to_csv('datasets/injuries_banned.csv')\n"
+    "csv_data = df.to_csv('datasets/injuries_banned.csv')"
    ]
   }
  ],
