--- a/download_dati.ipynb
+++ b/download_dati.ipynb
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_matches = pd.DataFrame()"
+    "merged_matches_by_home = pd.DataFrame()"
    ]
   },
   {
@@ -342,7 +342,7 @@
     "    away_match = away_games[(away_games['Data'] == home_match['Data']) & (away_games['h_team'] == home_match['h_team']) & (away_games['a_team'] == home_match['a_team'])]\n",
     "    away_match_reduced = away_match[away_columns_needed]\n",
     "    home_match = pd.merge(home_match.to_frame().T, away_match_reduced, on = [\"Data\", \"h_team\", \"a_team\"])\n",
-    "    normalized_matches = normalized_matches.append(home_match)"
+    "    merged_matches_by_home = merged_matches_by_home.append(home_match)"
    ]
   },
   {
@@ -358,16 +358,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_matches['Data'] = pd.to_datetime(normalized_matches['Data'], format='%d-%m-%Y')\n",
-    "normalized_matches = normalized_matches.sort_values(by=['Data'], ascending=True)\n",
-    "normalized_matches = normalized_matches.drop(columns=['Stadio', \"Data\"])"
+    "merged_matches_by_home['Data'] = pd.to_datetime(merged_matches_by_home['Data'], format='%d-%m-%Y')\n",
+    "merged_matches_by_home = merged_matches_by_home.sort_values(by=['Data'], ascending=True)\n",
+    "merged_matches_by_home = merged_matches_by_home.drop(columns=['Stadio', \"Data\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una volta definito l'ordine di appariszione delle colonne, salvo il dataframe secondo questo ordine"
+    "Una volta definito l'ordine di apparizione delle colonne, salvo il dataframe secondo questo ordine"
    ]
   },
   {
@@ -384,8 +384,8 @@
     "        'h_fouls', 'h_yellow_cards', 'h_red_cards', 'a_yellow_cards', 'a_red_cards', 'a_fouls', \n",
     "        'h_percentage_possession', 'a_percentage_possession']\n",
     "        \n",
-    "normalized_matches = normalized_matches[columns_needed]\n",
-    "normalized_matches.to_csv(\"normalized_matches.csv\")"
+    "merged_matches_by_home = merged_matches_by_home[columns_needed]\n",
+    "merged_matches_by_home.to_csv(\"merged_matches.csv\")"
    ]
   }
  ],
