--- a/dummy.ipynb
+++ b/dummy.ipynb
@@ -2,65 +2,275 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some data science tools will only work when the input data are numeric. This particularly true of machine learning. Many machine learning algorithms – like linear regression and logistic regression – strictly require numeric input data. If you try to use them with string-based categorical data, they will throw an error.\n",
+    "\n",
+    "So before you use such tools, you need to encode your categorical data as numeric dummy variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"merged_matches.csv\", index_col=0)"
+    "classes = {\n",
+    "    \"V\": 1, #vittoria casa\n",
+    "    \"P\": 2, #vittoria trasferta\n",
+    "    \"N\": 0 #pareggio\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>h_team</th>\n",
+       "      <th>Risultato</th>\n",
+       "      <th>h_goals</th>\n",
+       "      <th>a_team</th>\n",
+       "      <th>a_goals</th>\n",
+       "      <th>h_total_shots</th>\n",
+       "      <th>h_shots_on_target</th>\n",
+       "      <th>h_goals_on_penalty</th>\n",
+       "      <th>h_total_penalties</th>\n",
+       "      <th>h_completed_passings</th>\n",
+       "      <th>...</th>\n",
+       "      <th>a_shots_on_target</th>\n",
+       "      <th>a_goals_on_penalty</th>\n",
+       "      <th>a_total_penalties</th>\n",
+       "      <th>a_corners</th>\n",
+       "      <th>a_yellow_cards</th>\n",
+       "      <th>a_red_cards</th>\n",
+       "      <th>a_fouls</th>\n",
+       "      <th>a_completed_passings</th>\n",
+       "      <th>a_total_passings</th>\n",
+       "      <th>a_percentage_possession</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hellas Verona</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sassuolo</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>481.0</td>\n",
+       "      <td>540.0</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Inter</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Genoa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>563.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>430.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Torino</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>462.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Empoli</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Lazio</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>410.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>517.0</td>\n",
+       "      <td>589.0</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>363.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>480.0</td>\n",
+       "      <td>551.0</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['h_goals', 'a_goals', 'h_total_shots', 'h_shots_on_target',\n",
-       "       'h_goals_on_penalty', 'h_total_penalties', 'h_completed_passings',\n",
-       "       'h_total_passings', 'h_corners', 'h_percentage_possession', 'h_fouls',\n",
-       "       'h_yellow_cards', 'h_red_cards', 'a_total_shots', 'a_shots_on_target',\n",
-       "       'a_goals_on_penalty', 'a_total_penalties', 'a_corners',\n",
-       "       'a_yellow_cards', 'a_red_cards', 'a_fouls', 'a_completed_passings',\n",
-       "       'a_total_passings', 'a_percentage_possession', 'h_Atalanta',\n",
-       "       'h_Bologna', 'h_Cagliari', 'h_Empoli', 'h_Fiorentina', 'h_Genoa',\n",
-       "       'h_Hellas Verona', 'h_Inter', 'h_Juventus', 'h_Lazio', 'h_Milan',\n",
-       "       'h_Napoli', 'h_Roma', 'h_Salernitana', 'h_Sampdoria', 'h_Sassuolo',\n",
-       "       'h_Spezia', 'h_Torino', 'h_Udinese', 'h_Venezia', 'Risultato_N',\n",
-       "       'Risultato_P', 'Risultato_V', 'a_Atalanta', 'a_Bologna', 'a_Cagliari',\n",
-       "       'a_Empoli', 'a_Fiorentina', 'a_Genoa', 'a_Hellas Verona', 'a_Inter',\n",
-       "       'a_Juventus', 'a_Lazio', 'a_Milan', 'a_Napoli', 'a_Roma',\n",
-       "       'a_Salernitana', 'a_Sampdoria', 'a_Sassuolo', 'a_Spezia', 'a_Torino',\n",
-       "       'a_Udinese', 'a_Venezia'],\n",
-       "      dtype='object')"
+       "          h_team  Risultato  h_goals    a_team  a_goals  h_total_shots  \\\n",
+       "0  Hellas Verona          2        2  Sassuolo        3           14.0   \n",
+       "0          Inter          1        4     Genoa        0           17.0   \n",
+       "0         Torino          2        1  Atalanta        2           21.0   \n",
+       "0         Empoli          2        1     Lazio        3           17.0   \n",
+       "0        Udinese          0        2  Juventus        2           11.0   \n",
+       "\n",
+       "   h_shots_on_target  h_goals_on_penalty  h_total_penalties  \\\n",
+       "0                3.0                   1                  1   \n",
+       "0                8.0                   0                  0   \n",
+       "0                7.0                   0                  0   \n",
+       "0                4.0                   0                  0   \n",
+       "0                5.0                   1                  1   \n",
+       "\n",
+       "   h_completed_passings  ...  a_shots_on_target  a_goals_on_penalty  \\\n",
+       "0                 282.0  ...                7.0                   0   \n",
+       "0                 563.0  ...                4.0                   0   \n",
+       "0                 304.0  ...                2.0                   0   \n",
+       "0                 410.0  ...                3.0                   1   \n",
+       "0                 363.0  ...                3.0                   0   \n",
+       "\n",
+       "   a_total_penalties  a_corners  a_yellow_cards  a_red_cards  a_fouls  \\\n",
+       "0                  0        4.0               2            0     15.0   \n",
+       "0                  0        2.0               2            0      7.0   \n",
+       "0                  0        1.0               2            0     14.0   \n",
+       "0                  1        3.0               1            0     10.0   \n",
+       "0                  0        3.0               3            0     16.0   \n",
+       "\n",
+       "   a_completed_passings  a_total_passings  a_percentage_possession  \n",
+       "0                 481.0             540.0                     60.0  \n",
+       "0                 365.0             430.0                     41.0  \n",
+       "0                 328.0             462.0                     53.0  \n",
+       "0                 517.0             589.0                     54.0  \n",
+       "0                 480.0             551.0                     56.0  \n",
+       "\n",
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "teams = dataset['h_team']\n",
-    "teams = teams.drop_duplicates().values\n",
-    "teams.sort()\n",
+    "dataset = pd.read_csv(\"merged_matches.csv\", index_col=0)\n",
+    "dataset['Risultato'] = dataset[\"Risultato\"].replace(classes, inplace=False)\n",
     "\n",
-    "match = dataset\n",
-    "\n",
-    "match = match.rename(columns={\"h_team\": \"h\", \"a_team\": \"a\"})\n",
-    "cc = pd.get_dummies(match, prefix=teams.sort()) \n",
-    "\n",
-    "cc.to_csv(\"dummy.csv\")"
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_match = pd.get_dummies(dataset\n",
+    "               ,columns = ['h_team','a_team']\n",
+    "               ,prefix = ['h', 'a']\n",
+    "               )\n",
+    "dummy_match.to_csv(\"dummy_match.csv\")"
    ]
   }
  ],
