conversione data prima del salvataggio delle feature in features.ipynb. Creazione del differences_dataset che permette di calcolare la differenza tra le statistiche medie delle partite precedenti delle due squadre

--- a/features.ipynb
+++ b/features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per ciascuna squadra, per ciascuna partita, devo calcolare il valore \"previsto\" che è dato dalla somma di tutti i valori nelle partite precedenti. \n",
+    "Il codice sottostante permette di fare questo.\n",
+    "\n",
+    "I file relativi alle statistiche delle varie squadre sono salvati in una cartella. Prendo tutti i file, li leggo e calcolo le medie"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,49 +59,22 @@
     "        team_stats = team_stats.rename(columns=rename_fields) #rinomino le colonne per avere una nomenclatura \n",
     "        #team_stats = team_stats.drop(columns=['Stadio', 'Avversario', 'Rs', 'team', 'date', 'matchday', 'Risultato'])\n",
     "        team_stats = team_stats.drop(columns=['Stadio', 'Avversario', 'Rs'])\n",
-    "        stats_of_all_teams[team_name] = team_stats\n",
+    "        dataset = team_stats.drop(columns=['team', 'date', 'matchday', 'Risultato'])\n",
     "\n",
-    "#stats_of_all_teams['Atalanta'].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ata = stats_of_all_teams['Atalanta']\n",
-    "columns = ata.drop(columns=['team', 'date', 'matchday', 'Risultato'])\n",
-    "dataset = columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Per ciascuna squadra, per ciascuna partita, devo calcolare il valore \"previsto\" che è dato dalla somma di tutti i valori nelle partite precedenti. \n",
-    "Il codice sottostante permette di fare questo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for single_col in dataset.columns:\n",
-    "    ata[single_col] = ata[single_col].astype(float) #converto la colonna in float se no vengono approssimati i valori per difetto\n",
-    "    team_column = dataset[single_col]\n",
-    "    \n",
-    "    for index, value in enumerate(team_column.values):\n",
-    "        sum = value if index == 0 else 0\n",
-    "        for from_0_to_index in range(index): \n",
-    "            sum += dataset.iloc[from_0_to_index][single_col]\n",
+    "        for single_col in dataset.columns:\n",
+    "            team_stats[single_col] = team_stats[single_col].astype(float) #converto la colonna in float se no vengono approssimati i valori per difetto\n",
+    "            team_column = dataset[single_col]\n",
+    "            \n",
+    "            for index, value in enumerate(team_column.values):\n",
+    "                sum = value if index == 0 else 0\n",
+    "                for from_0_to_index in range(index): \n",
+    "                    sum += dataset.iloc[from_0_to_index][single_col]\n",
+    "                \n",
+    "                mean = (sum / index) if index > 0 else sum\n",
+    "                team_stats.at[index, single_col] = mean\n",
     "        \n",
-    "        mean = (sum / index) if index > 0 else sum\n",
-    "        ata.at[index, single_col] = mean\n",
-    "\n",
-    "ata"
+    "        team_stats['date'] = pd.to_datetime(team_stats['date'], format='%d-%m-%Y') #devo convertire la data altrimenti mi dà problemi quando la lego \n",
+    "        team_stats.to_csv(\"SerieA/Season21_22/AvgStats2/\"+file)"
    ]
   }
  ],
