Ottenimento dataset con le descrizioni predittive delle partite. C'è qualche cosa da sistemare

--- a/get_from_footballPredictions.ipynb
+++ b/get_from_footballPredictions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,25 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "match_dates = matches[['date']]\n",
-    "\n",
-    "urls = {}\n",
-    "for i, date in match_dates.iterrows():\n",
-    "    page = 'https://footballpredictions.com/footballpredictions/?date='\n",
-    "    string_data=date.iloc[0]\n",
-    "    converted_data = pd.to_datetime(string_data, format='%Y-%m-%d', errors='coerce').date()\n",
-    "    link_data = converted_data.strftime(format_date)\n",
-    "    page += link_data\n",
-    "    urls[str(converted_data)] = page\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -198,13 +180,22 @@
        " '2022-05-22': 'https://footballpredictions.com/footballpredictions/?date=22-05-2022'}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urls"
+    "match_dates = matches[['date']]\n",
+    "\n",
+    "urls = {}\n",
+    "for i, date in match_dates.iterrows():\n",
+    "    page = 'https://footballpredictions.com/footballpredictions/?date='\n",
+    "    string_data=date.iloc[0]\n",
+    "    converted_data = pd.to_datetime(string_data, format='%Y-%m-%d', errors='coerce').date()\n",
+    "    link_data = converted_data.strftime(format_date)\n",
+    "    page += link_data\n",
+    "    urls[str(converted_data)] = page\n"
    ]
   },
   {
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 119/119 [00:40<00:00,  2.90it/s]\n"
+      "100%|██████████| 119/119 [05:22<00:00,  2.71s/it]\n"
      ]
     }
    ],
@@ -277,12 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(\"keyDate_valueLinks.json\", \"w\") as fp:\n",
+    "with open(\"keyDat_valueLinks.json\", \"w\") as fp:\n",
     "    json.dump(links_of_pages_by_date,fp, indent=4) \n"
    ]
   }
