--- a/read_predictions.ipynb
+++ b/read_predictions.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "\n",
-    "file_links = open('keyDate_valueLinks.json')  \n",
+    "file_links = open('completati/keyDate_valueLinks.json')  \n",
     "links = json.load(file_links)\n",
     "  \n",
     "file_links.close()"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.read_csv('allMatchesWithResult.csv')"
+    "results = pd.read_csv('completati/description_predictions.csv') #QUESTO CSV DA CAMBIARE, L'HO USATO SOLO PER I TEST"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +98,38 @@
     "    pageTree = requests.get(prediction_link)\n",
     "    soup = BeautifulSoup(pageTree.text, features=\"lxml\")\n",
     "\n",
-    "    predtxt = soup.find(\"span\", {\"class\": \"predtxt-mob\"})\n",
-    "    text = []\n",
+    "    #vado a prendere il div contenente le predizioni\n",
+    "    predtxt = soup.find(\"div\", {\"class\": \"predictiontxt\"})\n",
+    "    details = []\n",
     "\n",
     "    paragraph = predtxt.find_all('p')\n",
     "    for p in paragraph:\n",
-    "        text.append(p.text)\n",
+    "        #in un aggiornamento della pagina, hanno messo anche \"This match will be played\" + data. Non mi interessa per la predizione, quindi lo scarto. In più ha senso considerare solo paragrafi che hanno del testo. Per alcune partite c'è anche la stringa \"This prediction will be released soon.\" \n",
+    "        p_text = p.text\n",
+    "        if (\"This match will be played\" not in p_text) & (len(p_text) > 0) & (\"This prediction will be released soon.\" not in p_text): \n",
+    "            details.append(p.text)\n",
     "\n",
+    "    #ottengo i nomi delle squadre che si affrontano\n",
     "    paragraph_team = soup.find_all(\"p\", {\"class\": \"teamnaam\"})\n",
-    "    return paragraph_team[0].contents[0], paragraph_team[1].contents[0], text"
+    "\n",
+    "    #cerco il risultato predetto\n",
+    "    predbox = soup.find(\"div\", {\"class\": \"predictionbox\"})\n",
+    "    predictions = predbox.find(\"strong\").text.split('-')\n",
+    "    \n",
+    "    return paragraph_team[0].contents[0], paragraph_team[1].contents[0], details, get_label(predictions, predbox)\n",
+    "\n",
+    "#ritorna la classe di predizione del match in base alla squadra di home (V = vittoria home, P = sconfitta home, N = pareggio)\n",
+    "def get_label(predictions, predbox):\n",
+    "    if len(predictions) > 1:\n",
+    "        home_goals, away_goals = predbox.find(\"strong\").text.split('-')\n",
+    "        home_goals = int(home_goals)\n",
+    "        away_goals = int(away_goals)\n",
+    "        if home_goals > away_goals:\n",
+    "            label = 'V'    \n",
+    "        else:\n",
+    "            label = 'P' if (home_goals < away_goals) else 'N'\n",
+    "    else:\n",
+    "        label = 'NAN'"
    ]
   },
   {
@@ -118,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 119/119 [06:59<00:00,  3.53s/it]\n"
+      "100%|██████████| 119/119 [06:05<00:00,  3.07s/it]\n"
      ]
     }
    ],
@@ -133,15 +156,17 @@
     "from tqdm import tqdm\n",
     "df = pd.DataFrame()\n",
     "count = 0\n",
+    "\n",
     "for key_date, links_of_predictions in tqdm(links.items()):\n",
     "    for prediction_link in links_of_predictions:\n",
-    "        home, away, text = get_prediction(prediction_link)\n",
+    "        home, away, details, label = get_prediction(prediction_link)\n",
     "        df.at[count, 'date'] = key_date        \n",
     "        df.at[count, 'h_team'] = check_name(home)\n",
     "        df.at[count, 'a_team'] = check_name(away)\n",
     "        \n",
-    "        text = '\\n\\n'.join(text)\n",
-    "        df.at[count, 'description'] = text\n",
+    "        details = '\\n\\n'.join(details)\n",
+    "        df.at[count, 'description'] = details\n",
+    "        df.at[count, 'prediction'] = label\n",
     "        \n",
     "        count += 1"
    ]
@@ -155,17 +180,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"all_correspondeces.csv\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -186,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +287,7 @@
     "        links = [link['href'] for link in links if (res.h_team.lower() in link['href']) or (res.a_team.lower() in link['href'])]\n",
     "        cleaned_links = list(dict.fromkeys(links))\n",
     "        if len(cleaned_links) > 0: \n",
-    "            home, away, text = get_prediction(cleaned_links[0])\n",
+    "            home, away, text, label = get_prediction(cleaned_links[0])\n",
     "            \n",
     "            recoveries.at[count, 'date'] = res.date\n",
     "            recoveries.at[count, 'h_team'] = check_name(home)\n",
@@ -275,6 +295,7 @@
     "            \n",
     "            text = '\\n\\n'.join(text)\n",
     "            recoveries.at[count, 'description'] = text\n",
+    "            recoveries.at[count, 'prediction'] = label\n",
     "\n",
     "            count += 1 #questo contatore serve per inserire in una determinata posizione\n",
     "        "
@@ -289,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +435,7 @@
        "[380 rows x 3 columns]"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,11 +446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.merge(results[['date', 'h_team', 'a_team', 'result']], recoveries[['h_team','a_team', 'description']], on=['h_team', 'a_team'])\n",
+    "dataset = pd.merge(results[['date', 'h_team', 'a_team', 'result']], recoveries[['h_team','a_team', 'description', 'prediction']], on=['h_team', 'a_team'])\n",
     "dataset.to_csv('description_predictions.csv')"
    ]
   }
