aggiunta reset index ad utils

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -60,7 +60,17 @@
     "#inserimento in posizione 0 nella colonna rank_h il valore 1\n",
     "df.at[0, 'rank_h'] = 1\n"
    ]
-  }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reset vecchio index\n",
+    "df.reset_index(drop=True, inplace=True)\n"
+   ]
+  },
  ],
  "metadata": {
   "kernelspec": {
