Aggiunta approccio con tfidf al modelo supervisionato. Creazione kmeans per la clusterizzazione e come metodo di valutazione utilizzazione delle etichette usate anche nel supervisionato. Modifiche struttura repo

--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "## Feature normalization\n",
-    "È necessaria la normalizzazione delle feature, dato che nel testo abbiamo le squadre e i sinonimi, vado a sostituire tutte le parole relative alla squadra di casa con home team e stessa cosa per la away team."
+    "È necessaria la normalizzazione delle feature, dato che nel testo abbiamo i nomi delle squadre ed i soprannomi, vado a sostituire tutte le parole relative alla squadra di casa con home team e stessa cosa per la away team."
    ]
   },
   {
