--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('description_predictions.csv')\n",
+    "dataset = pd.read_csv('description_predictions.csv', index_col=0)\n",
     "with open(\"sinonimi.json\") as jsonFile:\n",
     "    jsonObject = json.load(jsonFile)\n",
     "    jsonFile.close()"
@@ -31,29 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-415-3e36f7bd9202>:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dataset_withoutNAN['index'] = range_index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_withoutNAN = dataset[dataset.prediction != 'NAN']\n",
     "\n",
-    "range_index = [i for i in range(len(dataset_withoutNAN))]\n",
-    "dataset_withoutNAN['index'] = range_index \n",
-    "\n",
-    "dataset_withoutNAN = dataset_withoutNAN.set_index('index') "
+    "dataset_withoutNAN.reset_index(drop=True, inplace=True)"
    ]
   },
   {
@@ -65,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +71,13 @@
     "        for val in syn[key]:\n",
     "            description = description.replace(val.lower(), key)\n",
     "\n",
-    "    dataset_withoutNAN.at[i, 'description'] = description\n"
+    "    dataset_withoutNAN.at[i, 'description'] = description\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -118,11 +103,6 @@
        "      <th></th>\n",
        "      <th>description</th>\n",
        "      <th>prediction</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -156,16 +136,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             description  prediction\n",
-       "index                                                               \n",
-       "0      home team and away team take on each other in ...           0\n",
-       "1      home team begin their title defence with a mat...           1\n",
-       "2      away team will look to make a flying start to ...           2\n",
-       "3      newcomers home team will be aiming to kick off...           2\n",
-       "4      after failing to impress in the 2020/21 serie ...           2"
+       "                                         description  prediction\n",
+       "0  home team and away team take on each other in ...           0\n",
+       "1  home team begin their title defence with a mat...           1\n",
+       "2  away team will look to make a flying start to ...           2\n",
+       "3  newcomers home team will be aiming to kick off...           2\n",
+       "4  after failing to impress in the 2020/21 serie ...           2"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,33 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 1, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       ...,\n",
-       "       [1, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 1, 0, ..., 0, 0, 1]])"
-      ]
-     },
-     "execution_count": 419,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_counts.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,12 +236,13 @@
     "        'Avg Recall (weighted)': report['weighted avg']['recall'],\n",
     "        'Avg F1-score (weighted)': report['weighted avg']['f1-score']\n",
     "    })\n",
+    "\n",
     "E = pd.DataFrame(E).set_index('Model', inplace=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -334,63 +288,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.533333</td>\n",
+       "      <td>0.675439</td>\n",
+       "      <td>0.728956</td>\n",
+       "      <td>0.610374</td>\n",
+       "      <td>0.611306</td>\n",
+       "      <td>0.709647</td>\n",
+       "      <td>0.675439</td>\n",
+       "      <td>0.641975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.400000</td>\n",
+       "      <td>0.552632</td>\n",
+       "      <td>0.501618</td>\n",
        "      <td>0.444444</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.533333</td>\n",
+       "      <td>0.390323</td>\n",
+       "      <td>0.519758</td>\n",
+       "      <td>0.552632</td>\n",
+       "      <td>0.450792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Multinomial Naive Bayes</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.710526</td>\n",
+       "      <td>0.717405</td>\n",
+       "      <td>0.653565</td>\n",
+       "      <td>0.655152</td>\n",
+       "      <td>0.713004</td>\n",
+       "      <td>0.710526</td>\n",
+       "      <td>0.685058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.533333</td>\n",
+       "      <td>0.728070</td>\n",
+       "      <td>0.723264</td>\n",
+       "      <td>0.689019</td>\n",
+       "      <td>0.697018</td>\n",
+       "      <td>0.724232</td>\n",
+       "      <td>0.728070</td>\n",
+       "      <td>0.717430</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.533333</td>\n",
+       "      <td>0.622807</td>\n",
+       "      <td>0.833520</td>\n",
+       "      <td>0.526646</td>\n",
+       "      <td>0.490434</td>\n",
+       "      <td>0.780957</td>\n",
+       "      <td>0.622807</td>\n",
+       "      <td>0.542286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K-Nearest Neighbors</th>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.222222</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.444444</td>\n",
+       "      <td>0.570175</td>\n",
+       "      <td>0.573016</td>\n",
+       "      <td>0.528367</td>\n",
+       "      <td>0.512029</td>\n",
+       "      <td>0.586685</td>\n",
+       "      <td>0.570175</td>\n",
+       "      <td>0.548058</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -399,33 +353,33 @@
       "text/plain": [
        "                         Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                          \n",
-       "Logistic Regression      0.666667               0.333333            0.500000   \n",
-       "Support Vector Machine   0.666667               0.333333            0.500000   \n",
-       "Multinomial Naive Bayes  0.000000               0.000000            0.000000   \n",
-       "Decision Tree            0.666667               0.333333            0.500000   \n",
-       "Random Forest            0.666667               0.333333            0.500000   \n",
-       "K-Nearest Neighbors      0.333333               0.333333            0.166667   \n",
+       "Logistic Regression      0.675439               0.728956            0.610374   \n",
+       "Support Vector Machine   0.552632               0.501618            0.444444   \n",
+       "Multinomial Naive Bayes  0.710526               0.717405            0.653565   \n",
+       "Decision Tree            0.728070               0.723264            0.689019   \n",
+       "Random Forest            0.622807               0.833520            0.526646   \n",
+       "K-Nearest Neighbors      0.570175               0.573016            0.528367   \n",
        "\n",
        "                         Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                     \n",
-       "Logistic Regression                  0.400000                  0.444444   \n",
-       "Support Vector Machine               0.400000                  0.444444   \n",
-       "Multinomial Naive Bayes              0.000000                  0.000000   \n",
-       "Decision Tree                        0.400000                  0.444444   \n",
-       "Random Forest                        0.400000                  0.444444   \n",
-       "K-Nearest Neighbors                  0.222222                  0.666667   \n",
+       "Logistic Regression                  0.611306                  0.709647   \n",
+       "Support Vector Machine               0.390323                  0.519758   \n",
+       "Multinomial Naive Bayes              0.655152                  0.713004   \n",
+       "Decision Tree                        0.697018                  0.724232   \n",
+       "Random Forest                        0.490434                  0.780957   \n",
+       "K-Nearest Neighbors                  0.512029                  0.586685   \n",
        "\n",
        "                         Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                    \n",
-       "Logistic Regression                   0.666667                 0.533333  \n",
-       "Support Vector Machine                0.666667                 0.533333  \n",
-       "Multinomial Naive Bayes               0.000000                 0.000000  \n",
-       "Decision Tree                         0.666667                 0.533333  \n",
-       "Random Forest                         0.666667                 0.533333  \n",
-       "K-Nearest Neighbors                   0.333333                 0.444444  "
+       "Logistic Regression                   0.675439                 0.641975  \n",
+       "Support Vector Machine                0.552632                 0.450792  \n",
+       "Multinomial Naive Bayes               0.710526                 0.685058  \n",
+       "Decision Tree                         0.728070                 0.717430  \n",
+       "Random Forest                         0.622807                 0.542286  \n",
+       "K-Nearest Neighbors                   0.570175                 0.548058  "
       ]
      },
-     "execution_count": 423,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
